# lab2-Asgriim

cpp/: CMakeLists.txt  moby_dick.txt
cpp/bins/: CMakeLists.txt  aggregator.cpp  splitter.cpp  worker.cpp
cpp/include/: sentence_splitter.hpp  words_util.hpp
cpp/src/: sentence_splitter.cpp  words_util.cpp
